<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp"
                  android:id="@+id/acquiring_signal_layout">
        <ProgressBar android:id="@+id/ProgressBar01"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
        <TextView android:id="@+id/acquiring_signal_label"
                  android:text="@string/acquiring_signal"
                  android:layout_width="fill_parent"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:paddingLeft="5dp"/>
    </LinearLayout>
    <!-- Debug: 0uPMrDR1NeFAoCbelIV7w7yEQsWbEcaLeAZdRqA -->
    <!-- Real: 0SKImB9RzGo3BQUdxJRt-S380AF_Yhabkqw6PWw -->
    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/MapView"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:apiKey="0uPMrDR1NeFAoCbelIV7w7yEQsWbEcaLeAZdRqA"
        android:layout_weight="1"/>
    <Button
        android:text="@string/send_button"
        android:id="@+id/SendButton"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp" 
	android:visibility="gone"/>
    <Button
        android:text="@string/vip_button"
        android:id="@+id/VipButton"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
	android:visibility="gone"/>
</LinearLayout>
